Fix footer alignment and hover effect in note cards

--- a/public/css/Add-Note-context-menu.css
+++ b/public/css/Add-Note-context-menu.css
@@ -123,6 +123,8 @@ input:focus {
 }
 
 .note {
+    display: flex;
+    flex-direction: column;
     height: auto;
 
     margin: 0.8rem 2rem;
@@ -163,10 +165,15 @@ menu {
 
     margin-top: 1rem;
 }
+
 .note__icon {
     position: absolute;
     margin-left: -1.8rem;
     margin-top: -1.8rem;
+    display: none;
+}
+
+.note__footer-button {
     display: none;
 }
 
@@ -175,9 +182,13 @@ menu {
     height: 1.5rem;
 }
 
-/* Show icon on hover */
-.note:hover .note__icon {
+.note:hover .note__icon,
+.note:hover .note__footer-button {
     display: block;
+}
+
+.note:hover .note__footer {
+    margin-top: auto;
 }
 
 .notes--grid,
